@@ -16,6 +16,7 @@ Bug fixes
  - [web] only show the organizer field of an IMIP REPLY if one is defined
  - [web] fixed saving the note of a card (#3849)
  - [web] fixed support for recurrent tasks
+ - [web] improved validation of mail account delegators
  - [eas] improve handling of email folders without a parent
  - [eas] never send IMIP reply when the "initiator" is Outlook 2013/2016
  - [core] only consider SMTP addresses for AD's proxyAddresses (#3842)
